3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Tentative fix for bug #1519089: item cannot afford in container can be taken from store.
server/shop.c: do a real recursion in can_pay.
Ryp 2006-11-16

include\{treasure.h path.h face.h commands.h win32.h shstr.h timers.h
  config.h funcpoint.h object.h loader.h attack.h race.h newserver.h
  re-cmp.h living.h book.h plugproto.h player.h artifact.h material.h
  plugin.h spellist.h skills.h spells.h recipe.h god.h sounds.h map.h
  tod.h newclient.h}: Clean up anti-double-include mechanisms.
----
include/arch.h: Removing unused file.
include/Makefile.am: Remove reference to arch.h
common/arch.c: Remove reference to arch.h
Alex Schultz 2006-11-14

Fix bug #1573296: arena : spells with "target" doesn't works
server/spell_util.c: spell_find_dir should consider players when on battleground.
----
Fix bug #1594696: Altar created with creator - consecration
server/time.c: copy creator's level, as per behaviour before function rewrite.
Ryo 2006-11-13

doc/Developers/protocol: Add documentation about exp_table requestinfo
    addition
socket/loop.c: Add call to send_exp_table() in request_info_cmd()
socket/request.c: Add send_exp_table() to use a replyinfo exp_table to
   send data to client.
MSW 2006-11-03

socket/loop.c: Fix replyinfo, in that it was using incorrect length parameter
  when replying to unsupported requests.
MSW 2006-11-02

Fix for bug #1547517: DM issue with containers
server/apply.c: move_apply shouldn't exit if opened container.
Ryo 2006-10-29

Update code so everything uses draw_ext_info(), and remove new_draw_info().
For the most part, everything is just a simple update of function name/